<resources>
    <string name="app_name">OA</string>
    <string name="login">登陆</string>
    <string name="password">密码</string>
    <string name="account">账户</string>
    <string name="logo">logo</string>
    <string name="logo_text">OA 管理系统</string>
    <string name="night_mode">夜间模式</string>
    <string name="logout">退出</string>
    <string name="login_failed">登陆失败</string>
    <string name="network_not_connected">网络未连接</string>
    <string name="incorrect_account_or_password">账号或密码错误</string>
    <string name="account_or_password_blank">账号或密码不能为空</string>
    <string name="drawer_layout_open">抽屉打开</string>
    <string name="drawer_layout_close">抽屉关闭</string>
    <string name="account_empty">请输入账号</string>
    <string name="password_empty">请输入密码</string>
    <string name="nav_home">主页</string>
    <string name="nav_function">功能</string>
    <string name="nav_announcement">公告</string>
    <string name="nav_employee">员工</string>
    <string name="nav_ask_for_leave">请假</string>
    <string name="nav_personal_center">个人中心</string>
    <string name="nav_notice">通知</string>
    <string name="nav_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="employee_manage">员工管理</string>
    <string name="employee_add">员工添加</string>
    <string name="nav_title_welcome">欢迎回来：</string>
    <string name="please_login">请登录</string>
    <string name="fgt_home_sign_in">签到打卡</string>


</resources>
